// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEventListener should add listener to event 1`] = `
<span>
  0
</span>
`;

exports[`useEventListener should add listener to event 2`] = `
<span>
  1
</span>
`;

exports[`useEventListener should add listener to event 3`] = `
<span>
  2
</span>
`;

exports[`useEventListener should add listener to event 4`] = `
<span>
  1
</span>
`;

exports[`useEventReducer should reduce events to state 1`] = `
<span>
  <button
    onClick={[Function]}
  >
    -
  </button>
   0 
  <button
    onClick={[Function]}
  >
    +
  </button>
</span>
`;

exports[`useEventReducer should reduce events to state 2`] = `
<span>
  <button
    onClick={[Function]}
  >
    -
  </button>
   1 
  <button
    onClick={[Function]}
  >
    +
  </button>
</span>
`;

exports[`useEventReducer should reduce events to state 3`] = `
<span>
  <button
    onClick={[Function]}
  >
    -
  </button>
   2 
  <button
    onClick={[Function]}
  >
    +
  </button>
</span>
`;
